Alerts, SSL Dialog, Tor Removed, Fixed Permissions, Args Support, CTRL+L, CTRL+SHIFT+T, Autofocus

--- a/css/settings.css
+++ b/css/settings.css
@@ -10,6 +10,10 @@
  *   * Prevent text selection
  */
 
+body {
+  background: transparent !important;
+}
+
 *,
 *::after,
 *::before {
